fix switcher dark mode border

--- a/css/style_index.css
+++ b/css/style_index.css
@@ -1432,7 +1432,8 @@ footer {
   fill: rgb(255, 255, 255);
 }
 
-.switcher-input + .active-border {
+.switcher-input:hover + .active-border,
+.switcher-input:focus + .active-border {
   box-shadow: rgb(118 69 217) 0px 0px 0px 1px, rgb(118 69 217 / 60%) 0px 0px 0px 4px;
 }
 
